Fix trace metric creation and selective samplefile delete