@@ -44,7 +44,6 @@ import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static org.labkey.api.exp.api.ExperimentService.asInteger;
 
@@ -106,7 +105,6 @@ public class QCMetricConfigurationTable extends FilteredTable<TargetedMSSchema>
         protected Map<String, Object> insertRow(User user, Container container, Map<String, Object> row) throws DuplicateKeyException, ValidationException, QueryUpdateServiceException, SQLException
         {
             var insertedRow = super.insertRow(user, container, row);
-            TargetedMSManager.get().clearQCMetricCache(container, true);
             calculateAndInsertTraceValuesForMetric(asInteger(insertedRow.get("Id")), container, user);
             return insertedRow;
         }
@@ -117,7 +115,6 @@ public class QCMetricConfigurationTable extends FilteredTable<TargetedMSSchema>
             var updatedRow = super.updateRow(user, container, row, oldRow, configParameters);
             int metricId = asInteger(updatedRow.get("Id"));
             deleteTraceValueForMetric(metricId, container);
-            TargetedMSManager.get().clearQCMetricCache(container, true);
             calculateAndInsertTraceValuesForMetric(metricId, container, user);
             return updatedRow;
         }
@@ -125,9 +122,10 @@ public class QCMetricConfigurationTable extends FilteredTable<TargetedMSSchema>
         @Override
         protected Map<String, Object> deleteRow(User user, Container container, Map<String, Object> oldRow) throws InvalidKeyException, QueryUpdateServiceException, SQLException
         {
-            TargetedMSManager.get().clearQCMetricCache(container, true);
             deleteTraceValueForMetric(asInteger(oldRow.get("id")), container);
-            return super.deleteRow(user, container, oldRow);
+            Map<String, Object> result = super.deleteRow(user, container, oldRow);
+            TargetedMSManager.get().clearQCMetricCache(container, true);
+            return result;
         }
 
         private void deleteTraceValueForMetric(int metricId, Container container)
@@ -144,11 +142,20 @@ public class QCMetricConfigurationTable extends FilteredTable<TargetedMSSchema>
 
         private void calculateAndInsertTraceValuesForMetric(int metricId, Container container, User user)
         {
+            // Make sure that we pick up the new metric
+            TargetedMSManager.get().clearQCMetricCache(container, true);
+
             var qcMetricConfigurations = TargetedMSManager
-                .getEnabledQCMetricConfigurations(_queryTable.getUserSchema())
+                .getAllQCMetricConfigurations(_queryTable.getUserSchema())
                 .stream()
                 .filter(qcMetricConfiguration -> qcMetricConfiguration.getId() == metricId)
-                .collect(Collectors.toList());
+                .toList();
+
+            if (qcMetricConfigurations.isEmpty())
+            {
+                throw new IllegalStateException("No QCMetricConfiguration found for Id " + metricId);
+            }
+
             var runsInContainer = TargetedMSManager.getRunsInContainer(container);
 
             for (TargetedMSRun run : runsInContainer)
@@ -156,6 +163,9 @@ public class QCMetricConfigurationTable extends FilteredTable<TargetedMSSchema>
                 var qcTraceMetricValues = TargetedMSManager.calculateTraceMetricValues(qcMetricConfigurations, run);
                 qcTraceMetricValues.forEach(qcTraceMetricValue -> Table.insert(user, TargetedMSManager.getTableQCTraceMetricValues(), qcTraceMetricValue));
             }
+
+            // Clear again so that we have the right state for the presence/absence of data
+            TargetedMSManager.get().clearQCMetricCache(container, false);
         }
     }
 }
